--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"framer-motion": "^8.5.5",
 		"next": "^13.4.7",
 		"next-themes": "^0.2.1",
+		"nextjs-google-analytics": "^2.3.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^3.1.4",
